
#pragma once

#include "JuceHeader.h"


namespace e3
{
    class ParameterPanel : public Component
    {
    public:
        ParameterPanel();
    };


} // namespace e3