
@startuml

!include skin.iuml

title
<font size=24 color=#000000>Class Diagram: Module Display</font>

endtitle

hide empty members

class Module
class Port
class ModulePanel
class ViewPort
class ParameterPanel
class ModuleComponent
class PortComponent
class WireManager
class Wire
class EditorPanel

EditorPanel --o "1" ViewPort
ViewPort --o "1" ModulePanel
EditorPanel --o "1" ParameterPanel
ModulePanel --o "*" ModuleComponent
ModulePanel --o "*" WireManager
WireManager --o "*" Wire
ModuleComponent --o "1" Module
ModuleComponent --o "*" PortComponent
PortComponent --o "1" Port
Module --o "*" Port
ParameterPanel --o "1" Module

@enduml
